refactor: migrate static chat messages to fxml